# BearLang

./: .gitignore  CMakeLists.txt  DESIGN  README.md  TODO  build.sh
blc/src/: main.c
blc/stub/: stub.c
bli/src/: main.c
cmake/: CodeCoverage.cmake
docs/: docs.bl  gen_docs.bl  intro.bl  syntax.bl
docs/builtins/: opers.bl
docs/inc/: html_tools.bl
examples/: fac.bl  hello_web.bl  hello_web2.bl  nested_funcs.bl  simple_repl.bl  trivial_xml.bl
examples/euler/: problem01.bl  problem02.bl  problem03.bl  problem04.bl
include/bearlang/: bearjit.h  bearlang.h  build_config.h.in  builtins.h  builtins.inc  common.h  ctx.h  data_types.inc  err_types.inc  error_tools.h  eval.h  list_ops.h  parser.h  sexp.h  string_ops.h  types.h  utarray.h  uthash.h  utils.h
runtime/src/: bearjit.c  builtins.c  builtins.inc  ctx.c  error_tools.c  eval.c  init.c  lexer.l  list_ops.c  mpc.c  parser.c  sexp.c  string_ops.c  utils.c
stdlib/: CMakeLists.txt
stdlib/async/: TODO
stdlib/bldoc/: module.bl
stdlib/cffi/: CMakeLists.txt
stdlib/cffi/src/: cffi.c
stdlib/error/: CMakeLists.txt
stdlib/error/src/: error.c
stdlib/hello/: CMakeLists.txt
stdlib/hello/src/: hello.c
stdlib/os/: CMakeLists.txt
stdlib/os/src/: os.c
stdlib/py27/: CMakeLists.txt
stdlib/py27/src/: py27.c
stdlib/simpleweb/: CMakeLists.txt
stdlib/simpleweb/src/: simpleweb.c
stdlib/stdio/: CMakeLists.txt
stdlib/stdio/src/: stdio.c
stdlib/testmod/: CMakeLists.txt
stdlib/testmod/src/: testmod.c
stdlib/testmod2/: CMakeLists.txt
stdlib/testmod2/src/: testmod.c
stdlib/web/: module.bl
stdlib/xml/: CMakeLists.txt
stdlib/xml/src/: xml_generate.c
tests/: random_sexp.py
tests/bl/: functions.bl  main.bl  maths.bl  test_tools.bl
tests/parser/: main.c
tests/runtime/: main.c
